UoE/datashare: fix zip-file-link N+1 authorization storm
The zip-file-link endpoint authorized the dataset download per bitstream,
and each AuthorizeService.authorizeActionBoolean call ran several DB queries
(parent-object lookup, isAnyItemInstalled workspace+workflow probes, and a
per-policy group lookup). Cost was O(bitstreams) x several queries, recomputed
on every dataset page view with no cache, so a many-file dataset produced
hundreds-thousands of queries per view and saturated the backend under a
handful of concurrent users (blank page in prod).

Rework DatashareDatasetServiceImpl.isUserAuthorizedToDownloadZip to keep auth
behaviour identical while removing the storm:
- short-circuit at item level for administrators (they bypass policies);
- resolve the user's full group membership once (allMemberGroupsSet, cached on
  the Context) and evaluate each bitstream's READ policies in memory, honouring
  embargo via isDateValid - no per-file workflow/workspace/parent probing;
- cache the decision per (item, eperson) in a bounded, short-TTL Guava cache so
  repeated page views are O(1); the cache is bypassed when the request carries
  special (IP-based) groups so a session-specific result is never shared.

Extend the unit tests (TDD) to cover the admin short-circuit, the per-(item,
user) caching, single group-membership resolution regardless of file count and
embargoed-policy denial. The existing DatashareDatasetRestControllerIT (real
DB, end-to-end) is unchanged and still green.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>